2016-06-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
	Remove buggy code which explains Master/Read write error from
	ChangeLog on 2015-09-09.
	
2016-05-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Add macro for maximum IANA numbers.
	
	* libfreeipmi/spec/generate-enterprise-numbers-file.sh:
	Automatically update iana .h file with max index.

2016-05-10 Albert Chu <chu11@llnl.gov>

	* bmc-device/: Support --read-fru and --device-id option.

	* libfreeipmi/: Add ipmi_fru_open_device_id_with_buffer function.

	* ipmi-fru/: Add --fru-file option.

	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.

	* bmc-device/: Support --write-fru option.

2016-05-20 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec/enterprise-numbers.pl: Handle header and all
	corner cases in enterprise-numbers records list to avoid having to
	hand modify.

	* libfreeipmi/spec/generate-enterprise-numbers-file.sh: New file
	to automatically download and generate C file.

	* libfreeipmi/spec/enterprise-numbers.pl: Remove extraneous text
	from manufacturer names (e.g. "formerly known as" and similar
	text).

	* libfreeipmi/spec/ipmi-iana-enterprise-numbers-spec.c: Update to
	newest.
	
2016-05-06 Albert Chu <chu11@llnl.gov>

	* ipmi-fru/: Rename INTERPRET_OEM_DATA to INTERPRET_OEM_DATA_KEY
	for consistency.
	
2016-05-05 Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Set SDR quiet-cache when doing hostranged actions.

	* ipmi-config/: Support SDR options in ipmi-config.

	* Globally legacy old 'f' option for --flush-cache and 'Q' option
	for --quiet-cache.

2016-05-04 Albert Chu <chu11@llnl.gov>

	* man/ipmi-fru.8.pre.in, man/bmc-device.8.pre.in: Minor fixes

2016-03-09 Maksym Planeta <mcsim.planeta@gmail.com>

	* libfreeipmi/driver/ipmi-inteldcmi-driver.c,
	libfreeipmi/driver/ipmi-openipmi-driver.c,
	libfreeipmi/driver/ipmi-ssif-driver.c,